2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide/DesktopService.cs: Track last minute change.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Desktop/PlatformService.cs: External console
	  processes are now wrapped by a IProcessAsyncOperation
	  interface, instead of a Process instance. In this way it is
	  possible to create external consoles which are not directly
	  bound to a process.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Set document tag.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: changed navigate to mac shortcut.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Fixed 'Bug 598828 – Completion window should not move
	  relative to caret as it shrinks'.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: Remove
	  unnecessary check that forces the loading of the class.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: Set navigate to shortcut key.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs:
	  Corrected member filtering.

2010-04-23  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.NavigateToDialog:
	* MonoDevelop.Components/ListView.cs:
	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs:
	* MonoDevelop.Ide.Commands/SearchCommands.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GoToDialog.cs:
	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs:
	* MonoDevelop.Ide.NavigateToDialog/NavigateToCommand.cs:
	* gtk-gui/MonoDevelop.Ide.NavigateToDialog.NavigateToDialog.cs:
	  Worked on go to dialog. (go to file/type are unaffected in
	  function - only the gui changed). Added 'Navigate To'